--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,11 +4,20 @@
     color: rgb(226, 106, 69);
     line-height: 1.5em;
     margin: 0;
-    padding: auto; 
+    padding: 0; 
+}
+
+
+
+body {
+    background-color: #ffc8a6;
+    background-repeat: initial;
+    overflow: auto;
+    position: relative;   
 }
 
 header, footer {
-    text-align: right;
+    text-align: left;
     transform: none;
     list-style-type: disc;
     padding: 2em;  
@@ -20,6 +29,11 @@ article p, footer p, hr {
 
 nav, footer {
     font-size: 1em;
+}
+
+#wrapper {
+    width: 80%;
+    margin: auto;
 }
 
 div#bio {
@@ -69,6 +83,8 @@ img {
     height: auto;
 }
 
+/* Link styles */
+
 a:link {
    color: rgb(253, 100, 100); 
 }
@@ -81,8 +97,66 @@ a:hover {
     color: rgb(255, 151, 147);
 }
 
-body {
-    background-image:none;
-    background-repeat: repeat-y;
+/* Columns */
+
+.columns {float:right;}
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+/* End Columns CSS */
+
+div.expContainer {
+    font-size: .8em;
 }
 
+div.expContainer>h2 {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 2em;
+    
+}
+
+div.expContainer>p {
+    width: 50%;
+    padding-bottom: 2em;
+    font-size: 1.2em;
+}
+
+div.expRow {
+    margin-bottom: 2em;
+}
+
+div.textPad {
+    padding-right: 2em;
+}
+
+/* Flexbox */
+
+.flexContainer {
+    /* clear: right; */
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+/*    background-color: blue;*/
+}
+
+.flexContainer  div {
+    /*    background-color: white;*/
+        /* width: 30%;
+        padding: 1%; */
+    /*    border: 1px solid black;*/
+        background-color: rgba(237, 173, 138, 0.595)
+        ;
+ }
+
+ 
