--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,15 +29,7 @@ article p, footer p, hr {
 
 nav, footer {
     font-size: 1em;
-}
 
-#footer {
-    background-image: url("images/footer_bkg.jpg");
-    background-repeat: repeat-x;
-    COLOR: "Red"
-    clear; both
-    COLOR:
-    height; 114px;
 }
 
 #wrapper {
@@ -87,9 +79,15 @@ footer ul {
     margin-top: 2em;
 }
 
-img {
+.Image01 {
     width: 100%;
     height: auto;
+    margin: auto;
+}
+
+img {
+    width: auto;
+    height: 600px;
 }
 
 /* Link styles */
@@ -164,6 +162,11 @@ div.textPad {
         padding: 1%;
         border: 0px solid black;
         background-color: rgba(237, 173, 138, 0.595)
+ }
+
+ .footer{
+    width: auto;
+    display: flex;
  }
 
  
