--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,179 +1,230 @@
-  * {
-    font-family: 'Barlow', sans-serif;
-    font-size: 1em;
-    color: rgb(239, 146, 118);
-    line-height: 1.5em;
-    margin: 0;
-    padding: 0; 
+* {
+  font-family: "Barlow", sans-serif;
+  font-size: 1em;
+  color: rgb(239, 146, 118);
+  line-height: 1.5em;
+  margin: 0;
+  padding: 0;
 }
-
-
 
 body {
-    background-color: #000000;
-    background-repeat: initial;
-    overflow: auto;
-    position: relative;   
+  background-color: #000000;
+  background-repeat: initial;
+  overflow: auto;
+  position: relative;
 }
 
-header, footer {
-    text-align: right;
-    transform: none;
-    list-style-type: disc;
-    padding: 2em;  
+header,
+footer {
+  text-align: right;
+  transform: none;
+  list-style-type: disc;
+  padding: 2em;
 }
 
-article p, footer p, hr {
-    margin-top: 1em;
+article p,
+footer p,
+hr {
+  margin-top: 1em;
 }
 
-nav, footer {
-    font-size: 1em;
+nav,
+footer {
+  font-size: 1em;
 }
 
 #wrapper {
-    width: 80%;
-    margin: auto;
+  width: 80%;
+  margin: auto;
 }
 
 div#flexContainer {
-    width: 80%;
-    margin: auto;
-    padding: 3em;
-    position: relative;
-    align-content: center;
+  width: 80%;
+  margin: auto;
+  padding: 3em;
+  position: relative;
+  align-content: center;
 }
 
 div#bio {
-    padding: 2em;
+  padding: 2em;
 }
 
 h1 {
-    font-family: 'Barlow', sans-serif;
-    text-transform: none;
-    font-size: 3.0em;
-    color: rgb(239, 146, 118);
-    text-decoration: none; 
+  font-family: "Barlow", sans-serif;
+  text-transform: uppercase;
+  font-size: 4em;
+  color: #ffb9a3;
+  text-decoration: none;
+  animation-name: title;
+  animation-delay: 0s;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes title {
+  from {
+    color: #000000;
+  }
+  to {
+    color: #ffb9a3;
+  }
 }
 
 h2 {
-    font-family: 'Barlow',sans-serif;
-    text-transform: none;
-    font-size: 1.0em;
-    color: rgb(239, 146, 118);
-    text-decoration: none
+  font-family: "Barlow", sans-serif;
+  text-transform: none;
+  font-size: 1em;
+  color: rgb(239, 146, 118);
+  text-decoration: none;
 }
 
 h3 {
-    font-family: 'Barlow',sans-serif;
-    text-transform: none;
-    font-size: 1.0em;
-    color: rgb(239, 146, 118);
-    text-decoration: none
+  font-family: "Barlow", sans-serif;
+  text-transform: none;
+  font-size: 1em;
+  color: rgb(239, 146, 118);
+  text-decoration: none;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 li {
-    display: inline;
-    padding: 1em;
-    white-space: nowrap;
+  display: inline;
+  padding: 1em;
+  white-space: nowrap;
 }
 
 footer ul {
-    margin-top: 2em;
+  margin-top: 2em;
 }
 
 img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 div#posters {
-    width: 350px;
-    height: auto;
+  width: 350px;
+  height: auto;
 }
 
 /* Link styles */
 
 a:link {
-   color:  rgb(239, 146, 118);
+  color: rgb(239, 146, 118);
 }
 
 a:visited {
-    color: rgb(0, 156, 204);
+  color: rgb(0, 156, 204);
 }
 
 a:hover {
-    color: rgb(255, 151, 147);
+  color: rgb(255, 151, 147);
 }
 
 /* Columns */
 
-.columns {float:right;}
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
+.columns {
+  float: right;
+}
+.col-1 {
+  width: 8.33%;
+}
+.col-2 {
+  width: 16.66%;
+}
+.col-3 {
+  width: 25%;
+}
+.col-4 {
+  width: 33.33%;
+}
+.col-5 {
+  width: 41.66%;
+}
+.col-6 {
+  width: 50%;
+}
+.col-7 {
+  width: 58.33%;
+}
+.col-8 {
+  width: 66.66%;
+}
+.col-9 {
+  width: 75%;
+}
+.col-10 {
+  width: 83.33%;
+}
+.col-11 {
+  width: 91.66%;
+}
+.col-12 {
+  width: 100%;
+}
 
 /* End Columns CSS */
 
 div.expContainer {
-    font-size: .8em;
+  font-size: 0.8em;
 }
 
-div.expContainer>h2 {
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 2em;
-    
+div.expContainer > h2 {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 2em;
 }
 
-div.expContainer>p {
-    width: 50%;
-    padding-bottom: 2em;
-    font-size: 1.2em;
+div.expContainer > p {
+  width: 50%;
+  padding-bottom: 2em;
+  font-size: 1.2em;
 }
 
 div.expRow {
-    margin-bottom: 2em;
+  margin-bottom: 2em;
 }
 
 div.textPad {
-    padding-right: 2em;
+  padding-right: 2em;
 }
 
 /* Flexbox */
 
 .flexContainer {
-    /* clear: right; */
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+  /* clear: right; */
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .flexContainer > div {
-    /*    background-color: white;*/
-        width: 30%;
-        padding: 1%;
-        border: 0px solid rgb(255, 116, 116);
-        background-color: rgba(255, 147, 89, 0.508);
-        align-content: center;
- }
+  /*    background-color: white;*/
+  width: 30%;
+  padding: 1%;
+  border: 0px solid rgb(255, 116, 116);
+  background-color: rgba(255, 147, 89, 0.508);
+  align-content: center;
+}
 
+div.pizza_time > p {
+  height: auto;
+  width: 1200;
+}
 
- div.pizza_time>p {
-    height: auto;
-    width: 1200;
-   
- }
+div#poster {
+  transition: width 100%;
+}
+
+div#poster:hover {
+  width: 20%;
+}
+
+div .button-primary:hover {
+  transform: scale(1.2);
+}
