--- a/stylesheet02.css
+++ b/stylesheet02.css
@@ -1,80 +1,75 @@
 * {
-    font-family: 'Barlow', sans-serif;
-    font-size: 1em;
-    color:#ffb9a3;
-    line-height: 1.5em;
-    margin: 0;
-    padding: 0; 
+  font-family: "Barlow", sans-serif;
+  font-size: 1em;
+  color: #ffb9a3;
+  line-height: 1.5em;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #000000;
-    background-repeat: initial;
-    overflow: auto;
-    position: relative;   
+  background-color: #000000;
+  background-repeat: initial;
+  overflow: auto;
+  position: relative;
 }
 
 /* Text styles */
 
 body {
-    background-color: #000000;
-    background-repeat: initial;
-    overflow: auto;
-    position: relative;   
+  background-color: #000000;
+  background-repeat: initial;
+  overflow: auto;
+  position: relative;
 }
 
 h1 {
-    font-family: 'Barlow', sans-serif;
-    text-transform: uppercase;
-    font-size: 4.0em;
+  font-family: "Barlow", sans-serif;
+  text-transform: uppercase;
+  font-size: 4em;
+  color: #ffb9a3;
+  text-decoration: none;
+  animation-name: title;
+  animation-delay: 0s;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes title {
+  from {
+    color: #000000;
+  }
+  to {
     color: #ffb9a3;
-    text-decoration: none; 
-    animation-name: title;
-    animation-delay: 0s;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-
+  }
 }
-
-@keyframes title{
-    from {color: #000000;}
-    to {color: #ffb9a3}
-
-}
-
 
 h2 {
-    font-family: 'Barlow',sans-serif;
-    text-transform: none;
-    font-size: 3.0em;
-    color: #ffb9a3;
-    text-decoration: none
+  font-family: "Barlow", sans-serif;
+  text-transform: none;
+  font-size: 3em;
+  color: #ffb9a3;
+  text-decoration: none;
 }
 
 h3 {
-    font-family: 'Barlow',sans-serif;
-    text-transform: none;
-    font-size: 1.0em;
-    color: #ffb9a3;
-    text-decoration: none
+  font-family: "Barlow", sans-serif;
+  text-transform: none;
+  font-size: 1em;
+  color: #ffb9a3;
+  text-decoration: none;
 }
 
-header, footer {
-    text-align: left;
+header,
+footer {
+  text-align: left;
 }
 
 nav {
-    text-align: right;
+  text-align: right;
 }
 
-
-div#poster {
-    transition: width 100%;  
-
-}
-
-div#poster:hover {
-    width: 20%;
-
+.button-primary:hover {
+  transition: width 110%;
 }
